--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -1,22 +1,14 @@
 ---
-# Prometheus Configuration
-# Reference: https://prometheus.io/docs/prometheus/latest/configuration/configuration/
+# Prometheus Configuration - Production N8N Stack
+# Comprehensive monitoring without privileged containers
 
 global:
-  # Scrape interval - how often to scrape targets
   scrape_interval: 15s
-  
-  # Evaluation interval - how often to evaluate alert rules
   evaluation_interval: 15s
-  
-  # Timeout for individual scrapes
   scrape_timeout: 10s
-  
-  # External labels added to all time series
   external_labels:
     cluster: 'n8n-production'
     environment: 'production'
-    region: 'us-east-1'
 
 # Alertmanager configuration
 alerting:
@@ -24,7 +16,7 @@ alerting:
     - scheme: http
       static_configs:
         - targets:
-            - alertmanager:9093
+            - alertmanager:9493
 
 # Load alert rules
 rule_files:
@@ -35,101 +27,52 @@ scrape_configs:
   # Prometheus self-monitoring
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
-    scrape_interval: 30s
-
-  # n8n Main Instance (Webhook Handler)
-  - job_name: 'n8n-main'
-    scheme: http
-    metrics_path: '/metrics'
-    scrape_interval: 30s
-    scrape_timeout: 10s
-    honor_labels: true
-    static_configs:
-      - targets: ['n8n-main:5678']
+      - targets: ['localhost:9490']
         labels:
-          instance: 'n8n-main'
-          service: 'webhook-handler'
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: n8n-main:5678
-
-  # n8n Workers (Queue Processors)
-  - job_name: 'n8n-workers'
-    scheme: http
-    metrics_path: '/metrics'
+          service: 'monitoring'
+          component: 'prometheus'
     scrape_interval: 30s
-    scrape_timeout: 10s
-    honor_labels: true
-    docker_sd_configs:
-      - host: unix:///var/run/docker.sock
-    relabel_configs:
-      # Only scrape containers with label n8n.worker=true
-      - source_labels: [__meta_docker_container_name]
-        regex: '.*(n8n-worker).*'
-        action: keep
-      - source_labels: [__meta_docker_container_name]
-        target_label: container_name
-      - source_labels: [__meta_docker_container_id]
-        target_label: container_id
 
-  # PostgreSQL via postgres_exporter
-  - job_name: 'postgres'
-    scheme: http
-    metrics_path: '/metrics'
-    scrape_interval: 30s
-    scrape_timeout: 10s
-    static_configs:
-      - targets: ['localhost:9187']
-        labels:
-          database: 'n8n_production'
-          instance: 'postgres'
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: instance
-
-  # Redis via redis_exporter
-  - job_name: 'redis'
-    scheme: http
-    metrics_path: '/metrics'
-    scrape_interval: 30s
-    scrape_timeout: 10s
-    static_configs:
-      - targets: ['localhost:9121']
-        labels:
-          instance: 'redis-queue'
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: instance
-
-  # Traefik Metrics
+  # Traefik Reverse Proxy Metrics
+  # Provides: Request rates, response codes, latency, backend health
   - job_name: 'traefik'
-    scheme: http
-    metrics_path: '/metrics'
-    scrape_interval: 30s
-    scrape_timeout: 10s
     static_configs:
       - targets: ['traefik:8080']
         labels:
-          instance: 'traefik'
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: instance
-
-  # Docker Daemon Metrics (if enabled)
-  - job_name: 'docker'
-    scheme: http
+          service: 'ingress'
+          component: 'reverse-proxy'
+    scrape_interval: 15s
     metrics_path: '/metrics'
-    scrape_interval: 30s
-    scrape_timeout: 10s
+
+  # AlertManager
+  # Provides: Alert delivery status, notification failures
+  - job_name: 'alertmanager'
     static_configs:
-      - targets: ['localhost:9323']
+      - targets: ['alertmanager:9493']
         labels:
-          instance: 'docker-daemon'
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: instance
+          service: 'monitoring'
+          component: 'alerting'
+    scrape_interval: 30s
+    metrics_path: '/metrics'
+
+  # Docker Daemon Metrics
+  # Provides: Container CPU, Memory, Network, Disk I/O per container
+  # Requires Docker daemon configuration: see setup instructions
+  - job_name: 'docker'
+    static_configs:
+      - targets: ['172.17.0.1:9323']  # Docker host bridge IP
+        labels:
+          service: 'infrastructure'
+          component: 'docker-engine'
+    scrape_interval: 15s
+    metrics_path: '/metrics'
+
+  # Grafana (optional - if Grafana exposes metrics)
+  - job_name: 'grafana'
+    static_configs:
+      - targets: ['grafana:3000']
+        labels:
+          service: 'monitoring'
+          component: 'visualization'
+    scrape_interval: 30s
+    metrics_path: '/metrics'
