--- a/config/traefik/dynamic.yml
+++ b/config/traefik/dynamic.yml
@@ -1,117 +1,200 @@
+# ============================================================================
+# Traefik Dynamic Configuration - Production Grade for n8n + MCP
+# ============================================================================
+
 http:
+  # ==========================================================================
+  # Middlewares
+  # ==========================================================================
   middlewares:
-    https-redirect:
-      redirectScheme:
-        scheme: https
-        permanent: true
-    compress:
+    # MCP-Specific Middleware Chain
+    mcp-sse:
+      chain:
+        middlewares:
+          - mcp-no-buffer
+          - mcp-no-compress
+          - mcp-headers
+
+    mcp-no-buffer:
+      buffering:
+        maxRequestBodyBytes: 0
+        maxResponseBodyBytes: 0
+        memRequestBodyBytes: 0
+        memResponseBodyBytes: 0
+        retryExpression: "false"
+
+    mcp-no-compress:
       compress:
         excludedContentTypes:
-          - text/event-stream
-          - application/grpc
+          - "*/*"
+
+    mcp-headers:
+      headers:
+        customRequestHeaders:
+          X-Forwarded-Proto: "https"
+        customResponseHeaders:
+          Cache-Control: "no-cache, no-store, must-revalidate"
+          X-Accel-Buffering: "no"
+          X-Content-Type-Options: "nosniff"
+
     security-headers:
       headers:
+        customRequestHeaders:
+          X-Forwarded-Proto: "https"
         customResponseHeaders:
           X-Content-Type-Options: "nosniff"
           X-Frame-Options: "SAMEORIGIN"
           X-XSS-Protection: "1; mode=block"
           Referrer-Policy: "strict-origin-when-cross-origin"
-        customRequestHeaders:
-          X-Forwarded-Proto: "https"
-    n8n-rate-limit:
-      rateLimit:
-        average: 100
-        period: 60s
-        burst: 50
+          Strict-Transport-Security: "max-age=31536000; includeSubDomains; preload"
+        sslRedirect: true
 
+    compress:
+      compress:
+        excludedContentTypes:
+          - text/event-stream
+          - application/grpc
+          - application/json+sse
+          - application/x-ndjson
+        minResponseBodyBytes: 1024
+
+  # ==========================================================================
+  # Routers
+  # ==========================================================================
   routers:
-    n8n-main:
-      rule: "Host(`n8n.agentshq.net`)"
-      service: n8n-main
-      entrypoints:
-        - n8n
+    # MCP Route - HIGHEST PRIORITY
+    n8n-mcp:
+      rule: "Host(`n8n.agentshq.net`) && PathPrefix(`/mcp`)"
+      service: n8n-mcp
+      entryPoints:
+        - websecure
+      priority: 100
       middlewares:
-        - security-headers
-        - compress
+        - mcp-sse
       tls:
-        options: default
+        certResolver: letsencrypt
 
+    # n8n API Route
     n8n-api:
       rule: "Host(`n8n.agentshq.net`) && PathPrefix(`/api`)"
-      service: n8n-main
-      entrypoints:
-        - n8n
+      service: n8n-webhook
+      entryPoints:
+        - websecure
+      priority: 50
       middlewares:
         - security-headers
-        - n8n-rate-limit
         - compress
       tls:
-        options: default
+        certResolver: letsencrypt
 
+    # n8n Webhook Route
     n8n-webhooks:
       rule: "Host(`n8n.agentshq.net`) && PathPrefix(`/webhook`)"
-      service: n8n-main
-      entrypoints:
-        - n8n
+      service: n8n-webhook
+      entryPoints:
+        - websecure
+      priority: 50
       middlewares:
         - security-headers
         - compress
       tls:
-        options: default
+        certResolver: letsencrypt
 
-    grafana:
-      rule: "Host(`n8n.agentshq.net`)"
-      service: grafana
-      entrypoints:
-        - grafana
-      middlewares:
-        - security-headers
-        - compress
-      tls:
-        options: default
-
-    prometheus:
-      rule: "Host(`n8n.agentshq.net`)"
-      service: prometheus
-      entrypoints:
-        - web
-      middlewares:
-        - security-headers
-
-  services:
+    # n8n Main Route - DEFAULT
     n8n-main:
+      rule: "Host(`n8n.agentshq.net`)"
+      service: n8n-webhook
+      entryPoints:
+        - websecure
+      priority: 10
+      middlewares:
+        - security-headers
+        - compress
+      tls:
+        certResolver: letsencrypt
+
+    # HTTP to HTTPS Redirect
+    n8n-http-redirect:
+      rule: "Host(`n8n.agentshq.net`)"
+      entryPoints:
+        - web
+      service: noop@internal
+      middlewares:
+        - https-redirect
+
+    # Grafana Route
+    grafana:
+      rule: "Host(`grafana.agentshq.net`)"
+      service: grafana
+      entryPoints:
+        - websecure
+      middlewares:
+        - security-headers
+        - compress
+      tls:
+        certResolver: letsencrypt
+
+    grafana-http-redirect:
+      rule: "Host(`grafana.agentshq.net`)"
+      entryPoints:
+        - web
+      service: noop@internal
+      middlewares:
+        - https-redirect
+
+  # ==========================================================================
+  # Services
+  # ==========================================================================
+  services:
+    n8n-webhook:
       loadBalancer:
         servers:
-          - url: "http://n8n-main:5678"
-        sticky:
-          cookie:
-            name: n8n-session
-            secure: true
-            httpOnly: true
-            sameSite: "Strict"
+          - url: "http://n8n-webhook:5678"
+        passHostHeader: true
+        healthCheck:
+          path: /healthz
+          interval: 30s
+          timeout: 10s
+          scheme: http
+
+    n8n-mcp:
+      loadBalancer:
+        servers:
+          - url: "http://n8n-mcp:5678"
+        passHostHeader: true
+        responseForwarding:
+          flushInterval: "1ms"
+        healthCheck:
+          path: /healthz
+          interval: 30s
+          timeout: 10s
+          scheme: http
 
     grafana:
       loadBalancer:
         servers:
           - url: "http://grafana:3000"
+        passHostHeader: true
 
-    prometheus:
-      loadBalancer:
-        servers:
-          - url: "http://prometheus:9490"
+  # ==========================================================================
+  # Additional Middlewares
+  # ==========================================================================
+  middlewares:
+    https-redirect:
+      redirectScheme:
+        scheme: https
+        permanent: true
 
+# ============================================================================
+# TLS Configuration
+# ============================================================================
 tls:
   options:
     default:
-      minVersion: "VersionTLS12"
+      minVersion: VersionTLS12
       cipherSuites:
-        - "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384"
-        - "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384"
-        - "TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256"
+        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
       sniStrict: true
-
-  certificates:
-    - certFile: /etc/traefik/certs/wildcard_agentshq_net.crt
-      keyFile: /etc/traefik/certs/wildcard_agentshq_net.key
-      stores:
-        default: {}
