--- a/config/traefik/traefik.yml
+++ b/config/traefik/traefik.yml
@@ -1,48 +1,64 @@
-# Traefik static configuration
+# ============================================================================
+# Traefik Static Configuration
+# ============================================================================
+
 global:
-  checkNewVersion: true
+  checkNewVersion: false
   sendAnonymousUsage: false
 
 api:
-  dashboard: false
-  debug: false
+  dashboard: true
+  insecure: true
+  debug: true
 
+log:
+  level: DEBUG
+  format: common
+
+accessLog: {}
+
+# ============================================================================
+# Entrypoints
+# ============================================================================
+entryPoints:
+  web:
+    address: ":80"
+    http:
+      redirections:
+        entryPoint:
+          to: websecure
+          scheme: https
+          permanent: true
+
+  websecure:
+    address: ":443"
+
+  traefik:
+    address: ":8080"
+
+# ============================================================================
+# Certificate Resolvers
+# ============================================================================
+certificatesResolvers:
+  letsencrypt:
+    acme:
+      email: pesnik@outlook.com
+      storage: /letsencrypt/acme.json
+      tlsChallenge: {}
+
+# ============================================================================
+# Providers
+# ============================================================================
 providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
-    exposedByDefault: false
-    network: "n8n_n8n-network"
-  file:
-    filename: /etc/traefik/dynamic.yml
     watch: true
+    exposedByDefault: false
+    network: "n8n-network"
+    # REMOVED: swarmMode - not supported in v3
 
-entrypoints:
-  web:
-    address: ":8180"
-  n8n:
-    address: ":8645"
-    http:
-      tls:
-        certResolver: "local"
-        options: "default"
-  grafana:
-    address: ":8646"
-    http:
-      tls:
-        certResolver: "local"
-        options: "default"
-
+# ============================================================================
+# Ping
+# ============================================================================
 ping:
-  entryPoint: "traefik"        
-
-certificatesResolvers:
-  local:
-    acme:
-      storage: /etc/traefik/acme.json
-
-log:
-  level: info
-  format: json
-
-accessLog:
-  format: json
+  entryPoint: traefik
